ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern

DllImport int AAC_GetParams(const INTPTR aacHandle, PCHAR buffer, const int bufferLen, const int index);

DllImport int AAC_GetParamsCount(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_ECFsAutorizados_Clear(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetAcumulaVolumeDiario(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetArmazenaEncerranteIniFinal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetBarSimilarBalanca(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetBarSimilarECFComum(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetBarSimilarECFRestaurante(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetCadastroPlacaBomba(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetCriaAbastDivergEncerrante(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetCupomMania(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetDAVConfAnexoII(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetDAVDiscrFormula(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetEmiteContrEncerrAposREDZLEIX(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetEmitePED(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetImpedeVendaVlrZero(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetIndiceTecnicoProd(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetIntegracaoPafECF(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetIntegradoComBombas(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetMinasLegal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetNotaLegalDF(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetParaibaLegal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRealizaDAVECF(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRealizaDAVNaoFiscal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRealizaDAVOS(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRealizaLancamentoMesa(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRealizaPreVenda(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRecompoeGT(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRecompoeNumSerie(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTipoDesenvolvimento(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTipoFuncionamento(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTotalizaValoresLista(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTransfDAV(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTransfPreVenda(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTransportePassageiro(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTrocoEmCartao(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetUsaImpressoraNaoFiscal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_SetAcumulaVolumeDiario(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetArmazenaEncerranteIniFinal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetBarSimilarBalanca(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetBarSimilarECFComum(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetBarSimilarECFRestaurante(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetCadastroPlacaBomba(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetCriaAbastDivergEncerrante(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetCupomMania(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetDAVConfAnexoII(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetDAVDiscrFormula(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetEmiteContrEncerrAposREDZLEIX(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetEmitePED(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetImpedeVendaVlrZero(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetIndiceTecnicoProd(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetIntegracaoPafECF(const INTPTR aacHandle, const int tipo);

DllImport int AAC_IdentPaf_Paf_SetIntegradoComBombas(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetMinasLegal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetNotaLegalDF(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetParaibaLegal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRealizaDAVECF(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRealizaDAVNaoFiscal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRealizaDAVOS(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRealizaLancamentoMesa(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRealizaPreVenda(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRecompoeGT(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRecompoeNumSerie(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTipoDesenvolvimento(const INTPTR aacHandle, const int tipo);

DllImport int AAC_IdentPaf_Paf_SetTipoFuncionamento(const INTPTR aacHandle, const int tipo);

DllImport int AAC_IdentPaf_Paf_SetTotalizaValoresLista(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTransfDAV(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTransfPreVenda(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTransportePassageiro(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTrocoEmCartao(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetUsaImpressoraNaoFiscal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_SetParams(const INTPTR aacHandle, const PCHAR parametros[], const int count);